[package]
name = "envm"
version = "0.1.0"
edition = "2021"
description = "A tool help to manage the environment"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { verson = "1.0.133", features = ["derive"] }
clap = { version = "3.0.6", features = ["derive", "cargo"] }

[dev-dependencies]
tempfile = "3.3.0"
